--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Curso RxJs </h1>
     <hr>
-    
+    <div id="app"></div>
     <script src="bundle.js"></script>
 </body>
 </html>
